--- a/.github/workflows/main_test.yml
+++ b/.github/workflows/main_test.yml
@@ -58,7 +58,7 @@ jobs:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: ./manager-${{ steps.get_version.outputs.VERSION }}-linux-amd64
         asset_name: manager-${{ steps.get_version.outputs.VERSION }}-linux-amd64
-#         asset_content_type: application/octet-stream
+        asset_content_type: application/octet-stream
       
       
       
