--- a/.github/workflows/main_test.yml
+++ b/.github/workflows/main_test.yml
@@ -1,14 +1,13 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: CI - ADCS-Issuer
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
 on:
   push:
-    branches: [ dev ]
     tags: 
-      - v*
+      - 'v*'
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
