--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,8 @@
-on:
-  push:
-    # Sequence of patterns matched against refs/tags
-    tags:
-      - 'v*' # Push events that match tag pattern v*, i.e. v1.0, v20.15.10
+name: Publish Docker image on Release
 
-name: Release vaultsecret to dockerhub
+on:
+  release:
+    types: [published]
 
 jobs:
   build:
@@ -19,7 +17,7 @@ jobs:
       - name: Publish to Registry
         uses: elgohr/Publish-Docker-Github-Action@master
         with:
-          name: siemp/controller
+          name: siemp/adcs-controller
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
           buildargs: VERSION
