--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,6 +60,8 @@ jobs:
 
       - name: Publish to Registry
         uses: elgohr/Publish-Docker-Github-Action@master
+        env:
+          VERSION: ${{ steps.get_version.outputs.VERSION }}
         with:
           name: siemp/adcs-controller
           username: ${{ secrets.DOCKER_USERNAME }}
